change list into span

--- a/index.html
+++ b/index.html
@@ -9,46 +9,22 @@
 	</head>
 	<body>
 		<div id="particles-js"></div>
-		<header>
-			<nav>
-				<div class="row">
-					<ul class="main-nav">
-						<li></li>
-						<li></li>
-						<li></li>
-						<li></li>
-					</ul>
-				</div>
-			</nav>
-		</header>
-		<ul class="fly-in-text hidden">
-			<li>A</li>
-			<li>M</li>
-			<li>R</li>
-			<li>I</li>
-			<li>T</li>
-			<li>A</li>
-		</ul>
-		<ul class="text">
-			<li>S</li>
-			<li>I</li>
-			<li>N</li>
-			<li>G</li>
-			<li>H</li>
-			<li>A</li>
-		</ul>
-		<ul class="text1">
-			<li>R</li>
-			<li>O</li>
-			<li>Y</li>
-		</ul>
-		<div class="wrapper">
-			<div class="btn">
-				<button type="button">Shoot It</button>	
+		<main>
+			<div class="user_name">
+				<span>amrita</span>
+				<span>singha</span>
+				<span>roy</span>
 			</div>
-		</div>
+			<div class="wrapper">
+				<div class="btn">
+					<button type="button">Shoot It</button><br/>
+					<button type="button" class="av_link">
+						<a href="https://youtu.be/mDha4fx4CiI" target="_blank">See It</a>
+					</button>	
+				</div>
+			</div>
+		</main>
 		<script type="text/javascript" src="particles.min.js"></script>
 		<script type="text/javascript" src="app.min.js" defer></script>
-		</script>
 	</body>
 </html>
