added a rock paper scissor game.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 			</div>
 			<div class="wrapper">
 				<div class="btn">
-					<button type="button">Shoot It</button><br/>
+					<button type="button" class="av_link_new">
+						<a href="game.html" target="_blank">Play</a>
+					</button><br/>
 					<button type="button" class="av_link">
 						<a href="https://youtu.be/mDha4fx4CiI" target="_blank">See It</a>
 					</button>	
