modified the game.

--- a/game.html
+++ b/game.html
@@ -35,6 +35,7 @@
             </div>
         </div>
         <p id="action-message">Make your move</p>
+        <p id="T_C">How to Play<br/>Scissor cuts paper, paper covers rock<br/>Rock crushes lizard, lizard poisons Spock<br/>Spock smashes scissor, scissor decapacitates lizard<br/>Lizard eats paper, paper disproves Spock<br/>Spock vaporizes stone and just as it always has, Rock crushes stone</p>
         <script src="game.js" charset="utf-8"></script>
     </body>
 </html>
